fix(thumb-xs): remove vertical-align

--- a/src/app/scss/_base.scss
+++ b/src/app/scss/_base.scss
@@ -903,7 +903,6 @@ app, .app {
     font-size: $font-size-sm;
 
     .thumb-xs{
-      vertical-align: -9px;
       margin-right: 5px;
     }
   }
